<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:textStyle="italic"
        tools:text="Title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEmployeeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_name"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/employee_add_name"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEmployeeSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_salary"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/etSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:hint="@string/employee_add_salary"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEmployeeAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_age"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/employee_add_age"
            android:inputType="numberSigned"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnAddOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/ok" />


    </LinearLayout>

</LinearLayout>